fixed issue of changing rpm for one input joint changes it for all. Now rpm speed for each joint is separate. Also changed spacing below each label in edit panel to be smaller (6px)

--- a/src/app/components/SideNav/Edit/joint-edit-panel/joint-edit-panel.component.scss
+++ b/src/app/components/SideNav/Edit/joint-edit-panel/joint-edit-panel.component.scss
@@ -136,7 +136,7 @@ button {
 .dar-cell {
   display: flex;
   align-items: center;
-  margin-top: 8px;
+  margin-top: 6px;
   margin-bottom: 5px;
 }
 
@@ -179,7 +179,7 @@ button {
   display: block;
   font: inherit;
   color: inherit;
-  margin-bottom: 4px;
+  margin-bottom: 2px;
 }
 
 .xy-row {
@@ -214,7 +214,7 @@ button {
   display: block;
   font: inherit;
   color: inherit;
-  margin-bottom: 4px;
+  margin-bottom: 2px;
 }
 
 .speed-row {
